infra/k8s/gateway/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: edulearn
  labels:
    app: api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
       # serviceAccountName: edulearn-sa 
       containers:
        - name: gateway
          image: edulearn-gateway:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 4000
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "200m"
              memory: "256Mi"
          # livenessProbe:
          #   httpGet:
          #     path: /health
          #     port: 4000
          #   initialDelaySeconds: 15
          #   periodSeconds: 10
          # readinessProbe:
          #   httpGet:
          #     path: /health
          #     port: 4000
          #   initialDelaySeconds: 5
          #   periodSeconds: 5
